Style fix: no line wrap in fixed height boxheader

--- a/css/styles.css
+++ b/css/styles.css
@@ -969,7 +969,8 @@ div.boxheader div div {
 	color: white;
 	font-weight: bold;
 	height: 21px;
-        line-height: 20px;
+	line-height: 20px;
+	white-space: nowrap;
 }
 
 /*
